@@ -26,7 +26,7 @@
     <version>0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>YouTube Dojo - Main</name>
+    <name>YouTube Dojo - Top of Project (Dojo)</name>
 
     <licenses>
         <license>
@@ -71,15 +71,18 @@
     <modules>
         <module>bom</module>
         <module>model</module>
-        <module>service-youtube-kata</module>
-        <module>controller-spring-mvc-kata</module>
-        <module>thymeleaf-kata</module>
+        <module>persistence</module>
+        <!--
+        <module>service</module>
+        <module>controller</module>
+        <module>presentation</module>
         <module>webapp</module>
+        -->
     </modules>
 
     <properties>
-        <maven.compiler.source>18</maven.compiler.source>
-        <maven.compiler.target>18</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- it looks like we can't inherit either <properties> or <pluginManagement> from parent pom. :-( -->
@@ -164,6 +167,7 @@
                         <maxmem>1024m</maxmem>
                         <encoding>UTF-8</encoding>
                         <compilerArgs>
+                            <arg>-J--add-opens=java.base/java.net=ALL-UNNAMED</arg>
                             <arg>-XDcompilePolicy=simple</arg>
                             <!-- disabling error-prone plugin for now as lots of syntactical changes needed -->
                             <!--
@@ -235,6 +239,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <excludes>
+                        <exclude>**/ITest*</exclude>
                         <exclude>**/TestContainer*</exclude>
                     </excludes>
                 </configuration>
@@ -251,6 +256,7 @@
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <configuration>
                     <includes>
+                        <include>**/ITest*</include>
                         <include>**/TestContainer*</include>
                     </includes>
                 </configuration>
@@ -270,6 +276,20 @@
                 <configuration>
                     <releaseProfiles>my-release-profile</releaseProfiles>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
             <!-- TODO - this fails with message that DocumentContent class can't be found! -->
@@ -293,6 +313,112 @@
     </build>
 
     <profiles>
+        <profile>
+            <id>javadoc</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <build>
+                <pluginManagement>
+                    <plugins>
+
+                        <!-- javadoc can contain markdown instead of html. Still produces html. -->
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-javadoc-plugin</artifactId>
+                            <!-- do not use 3.5.1: transitive dependencies of docletArtifact are not added to
+                                 docletpath, version 3.5.1 resolves this issue. https://issues.apache.org/jira/browse/MJAVADOC-742 -->
+                            <version>3.4.1</version>
+                            <executions>
+                                <execution>
+                                    <id>attach-sources</id>
+                                    <goals>
+                                        <goal>jar</goal>
+                                        <goal>test-jar</goal>
+                                    </goals>
+                                </execution>
+                                <execution>
+                                    <id>aggregate</id>
+                                    <goals>
+                                        <goal>aggregate</goal>
+                                    </goals>
+                                    <phase>site</phase>
+                                    <configuration>
+                                        <!-- Specific configuration for the aggregate report -->
+                                    </configuration>
+                                </execution>
+                                <execution>
+                                    <id>resource-bundles</id>
+                                    <phase>package</phase>
+                                    <goals>
+                                        <!-- produce source artifact for main project sources -->
+                                        <goal>resource-bundle</goal>
+
+                                        <!-- produce source artifact for project test sources -->
+                                        <goal>test-resource-bundle</goal>
+                                    </goals>
+                                    <configuration>
+                                        <detectOfflineLinks>false</detectOfflineLinks>
+                                    </configuration>
+                                </execution>
+                            </executions>
+                            <configuration>
+                                <useStandardDocletOptions>true</useStandardDocletOptions>
+                                <doclet>org.jdrupes.mdoclet.MDoclet</doclet>
+                                <docletArtifacts>
+                                    <docletArtifact>
+                                        <groupId>org.jdrupes.mdoclet</groupId>
+                                        <artifactId>doclet</artifactId>
+                                        <version>4.2.0</version>
+                                    </docletArtifact>
+                                    <docletArtifact>
+                                        <groupId>com.vladsch.flexmark</groupId>
+                                        <artifactId>flexmark-all</artifactId>
+                                        <version>0.64.8</version>
+                                    </docletArtifact>
+                                </docletArtifacts>
+                                <!--  Note: additionalDependencies are added to the -classpath, not the docletpath -->
+                                <additionalDependencies>
+                                </additionalDependencies>
+                                <additionalJOptions>
+                                    <additionalJOption>-J--add-exports=jdk.javadoc/jdk.javadoc.internal.doclets.toolkit=ALL-UNNAMED</additionalJOption>
+                                    <additionalJOption>-J--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED</additionalJOption>
+                                    <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.doclint=ALL-UNNAMED</additionalJOption>
+                                    <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</additionalJOption>
+                                    <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</additionalJOption>
+                                    <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</additionalJOption>
+                                    <additionalJOption>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</additionalJOption>
+                                </additionalJOptions>
+                                <detectLinks>true</detectLinks>
+                                <links>
+                                    <link>https://docs.oracle.com/en/java/javase/18/docs/api/</link>
+                                    <link>https://docs.oracle.com/en/java/javase/18/docs/api/java.base/</link>
+                                    <!-- <link>https://www.jooq.org/javadoc/latest/help-doc.html</link> -->
+                                    <link>https://www.jooq.org/javadoc/latest/</link>
+                                    <link>https://docs.spring.io/spring-boot/api/java/</link>
+                                    <link>https://docs.spring.io/spring-framework/docs/current/javadoc-api/</link>
+                                    <!-- <link>https://docs.spring.io/spring-restdocs/docs/current/api/</link> -->
+                                    <link>https://javadoc.io/static/org.flywaydb/flyway-core/3.2/</link>
+                                    <link>https://googleapis.dev/java/google-api-services-youtube/latest/</link>
+                                    <link>https://javadoc.io/doc/com.google.http-client/google-http-client/latest/</link>
+                                    <link>https://javadoc.io/doc/org.testcontainers/testcontainers/latest/</link>
+                                    <link>https://javadoc.io/doc/com.zaxxer/HikariCP/latest/com.zaxxer.hikari/</link>
+                                    <link>https://logging.apache.org/log4j/2.x/javadoc/log4j-api/</link>
+                                    <link>https://logging.apache.org/log4j/2.x/javadoc/log4j-core/</link>
+                                </links>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
         <profile>
             <id>my-release-profile</id>
             <activation>
